Add addTemplateEmail
