# src/Controllers/EmailController.php
@@ -127,6 +127,51 @@ class EmailController extends Controller
     }
 
     /**
+     * Create new email from template
+     * Usage: POST /emails/{email_id} | Scope: admin, super_admin
+     *
+     * @param Request  $request  Slim request interface
+     * @param Response $response Slim response interface
+     *
+     * @return Response Response to show
+     * @throws NotFound if database return nothing
+     * @throws BadRequest if request contain errors
+     * @throws Unauthorized if user don't have the permission
+     */
+    public function addTemplateEmail(Request $request, Response $response, array $args): Response
+    {
+        // Check scope before accessing function
+        $this->checkScope(["admin"]);
+
+        // Check if email exist
+        $this->checkExist("email_id", $args, "emails", true, "email_id");
+
+        // Check if values exist in request
+        $this->checkExist("title", $GLOBALS["body"], null, true);
+
+        // Fetch template
+        $template = ($this->database()->find(
+            "emails",
+            ["content"],
+            ["email_id" => $args["email_id"]],
+            true
+        ))["content"];
+
+        // Create new email
+        $this->database()->create(
+            "emails",
+            [
+                "title" => $GLOBALS["body"]["title"],
+                "description" => $GLOBALS["body"]["description"] ?? '',
+                "content" => $template
+            ]
+        );
+
+        // Display success code
+        return $this->successCode()->created();
+    }
+
+    /**
      * Edit information of an email
      * Usage: PUT /emails/{email_id} | Scope: admin, super_admin
      *
