# swagger.yaml
@@ -889,6 +889,53 @@ paths:
         - OAuth2_App: [ "admin", "super_admin" ]
         - OAuth2_Pass: [ "admin", "super_admin" ]
         - AccessToken: [ ]
+    post:
+      tags:
+        - "Email"
+      summary: "Add email from template"
+      description: "Add new email from existing one"
+      operationId: "addTemplateEmail"
+      parameters:
+        - name: "email_id"
+          in: "path"
+          description: "Target email"
+          required: true
+          type: "string"
+        - in: "body"
+          name: "body"
+          description: "Information to update"
+          required: true
+          schema:
+            $ref: "#/definitions/new_template_email"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/201"
+        "400":
+          description: "Bad Request"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/400"
+        "401":
+          description: "Unauthorized"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/401"
+        "404":
+          description: "Not Found"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/404"
+      security:
+        - OAuth2_App: [ "admin", "super_admin" ]
+        - OAuth2_Pass: [ "admin", "super_admin" ]
+        - AccessToken: [ ]
     put:
       tags:
         - "Email"
@@ -1423,6 +1470,19 @@ definitions:
         example: "Content of the mail"
     xml:
       name: "new_email"
+  new_template_email:
+    type: "object"
+    required:
+      - title
+    properties:
+      title:
+        type: "string"
+        example: "Title"
+      description:
+        type: "string"
+        example: "Description of the mail"
+    xml:
+      name: "new_template_email"
   update_email:
     type: "object"
     properties:
